--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					</ul>
 				</div>
 			</nav>
-		</a></span></small></p>
+			<div class="colorlib-footer">
 				<ul>
 					<li><a href="#"><i class="icon-facebook2"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
