--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Bryan Bowles</a></h1>
-				<span class="position"><a href="#">Software Development Engineer</a> in United States</span>
+				<span class="position">Software Development Engineer</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -73,9 +73,9 @@
 			</nav>
 			<div class="colorlib-footer">
 				<ul>
-					<li><a href="#"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+					<li><a href="https://www.facebook.com/bryan.bowles.96"><i class="icon-facebook2"></i></a></li>
+					<li><a href="https://www.instagram.com/_bryanbowles_/"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/bbowles98/"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
 
