--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<div id="navbar" class="collapse">
 					<ul>
 						<li class="active"><a href="#about" data-nav-section="home">About</a></li>
-						<li><a href="#" data-nav-section="education">Education</a></li>
+						<li><a href="#education" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
@@ -76,7 +76,7 @@
 		<div id="colorlib-main">
 
 			<section class="colorlib-about" data-section="about">
-			<a name="#about"/>
+			<a name="#about"></a>
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-12">
@@ -185,6 +185,7 @@
 			</section>
 
 			<section class="colorlib-skills" data-section="skills">
+				<a name="#skills"> </a>
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -267,6 +268,7 @@
 			</section>
 
 			<section class="colorlib-education" data-section="education">
+				<a name="#education"> </a>
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
