--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-						<li class="active"><a href="about" data-nav-section="home">About</a></li>
-						<li><a href="education" data-nav-section="education">Education</a></li>
-						<li><a href="experience" data-nav-section="experience">Experience</a></li>
-						<li><a href="contact" data-nav-section="contact">Contact</a></li>
+						<li class="active"><a href="about" data-nav-section="#home">About</a></li>
+						<li><a href="#education" data-nav-section="education">Education</a></li>
+						<li><a href="#experience" data-nav-section="experience">Experience</a></li>
+						<li><a href="#contact" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -76,7 +76,7 @@
 		<div id="colorlib-main">
 
 			<section class="colorlib-about" data-section="about">
-			<a name="#about"></a>
+			<a name="about"></a>
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-12">
@@ -96,7 +96,7 @@
 			</section>
 
 			<section class="colorlib-skills" data-section="skills">
-				<a name="#skills"> </a>
+				<a name="skills"> </a>
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -179,7 +179,7 @@
 			</section>
 
 			<section class="colorlib-education" data-section="education">
-				<a name="#education"> </a>
+				<a name="education"> </a>
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -277,7 +277,7 @@
 			</section>
 
 			<section class="colorlib-experience" data-section="experience">
-				<a name="#experience"> </a>
+				<a name="experience"> </a>
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -364,7 +364,7 @@
 			</section>
 
 			<section class="colorlib-contact" data-section="contact">
-				<a name="#contact"> </a>
+				<a name="contact"> </a>
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
