--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-						<li class="active"><a href="about" data-nav-section="#home">About</a></li>
+						<li class="active"><a href="#about" data-nav-section="home">About</a></li>
 						<li><a href="#experience" data-nav-section="experience">Experience</a></li>
 						<li><a href="#education" data-nav-section="education">Education</a></li>
 						<li><a href="#contact" data-nav-section="contact">Contact</a></li>
@@ -85,7 +85,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Jackson Ford</strong> On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
+										<p><strong>Hi I'm Bryan Bowles</strong> On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
 										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 									</div>
 								</div>
@@ -115,7 +115,8 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Full Stack Developer</a> <span>2017-2018</span></h2>
+					                  <h2>Software Delevopment Engineer Intern <span>May 2019 - Aug 2019</span></h2>
+					                  <h3> Amazon </h3>
 					                  <p>Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may.</p>
 					               </div>
 					            </div>
