--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-						<li class="active"><a href="#about" data-nav-section="home">About</a></li>
+						<li><a href="#about" data-nav-section="home">About</a></li>
 						<li><a href="#experience" data-nav-section="experience">Experience</a></li>
 						<li><a href="#education" data-nav-section="education">Education</a></li>
 						<li><a href="#contact" data-nav-section="contact">Contact</a></li>
