--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">bryanbow@umich.edu</a></p>
+									<p>bryanbow@umich.edu</p>
 								</div>
 							</div>
 
@@ -389,7 +389,7 @@
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">248 - 786 - 7540</a></p>
+									<p>248 - 786 - 7540</p>
 								</div>
 							</div>
 						</div>
