--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 	</head>
 	<body>
+	<a name="about"></a>
 	<div id="colorlib-page">
 		<div class="container-wrap">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
@@ -76,7 +77,6 @@
 		<div id="colorlib-main">
 
 			<section class="colorlib-about" data-section="about">
-			<a name="about"></a>
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-12">
@@ -130,6 +130,7 @@
 					               </div>
 					               <div class="timeline-label">
 					               	<h2>Software Delevopment Engineer Intern <span>May 2018 - Aug 2018</span></h2>
+					                  <p> <strong> Amazon </strong> </p>
 					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					               </div>
 					            </div>
