--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile.jpg);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">Bryan Bowles</a></h1>
+				<h1 id="colorlib-logo">Bryan Bowles</h1>
 				<span class="position">Software Development Engineer</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -146,7 +146,7 @@
 					               </div>
 					               <div class="timeline-label">
 					               	<h2>Freelance Web Developer <span>May 2017 - Sep 2017</span></h2>
-					                  <p><a href="https://www.elliottwoodworking.com">www.elliottwoodworking.com</a>  Implemented a system allowing clients to order drawer boxes online</p>
+					                  <p><a href="https://www.elliottwoodworking.com">www.elliottwoodworking.com</a> - Implemented a system allowing clients to order drawer boxes online</p>
 					                  <p>Site has done ~$70,000 in sales since late August 2017</p>
 					               </div>
 					            </div>
