--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile.jpg);"></div>
-				<h1 id="colorlib-logo">Bryan Bowles</h1>
+				<h1 id="colorlib-logo" style="margin: 0 auto;">Bryan Bowles</h1>
 				<span class="position">Software Development Engineer</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
