add new font' git

--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<h2 style="font-family: Arial, sans-serif;">University of Michigan</h2>
+							<h2 style="font-family: Bookman, sans-serif;">University of Michigan</h2>
 							<p>Pursuing B.S.E. Computer Science, College of Engineering</p>
 							<p>Estimated graduation <strong>May 2020</strong></p>
 							<br>
-							<h2> Troy Athens Highschool</h2>
+							<h2 style="font-family: Bookman, sans-serif;"> Troy Athens Highschool</h2>
 							<p>Graduated <strong> May 2016 </strong></p>
 						</div>
 					</div>
