--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi, I'm Bryan Bowles.</strong> I am currently a senior at the University of Michigan studying computer science set to graduate in May of 2020. </p>
-										<p>I spent the past two summers interning in Seattle and fell in love with that region of the country. I am currently looking for a fulltime software engineer role, ideally in the pacific northwest.</p>
+										<p><strong>Hi, I'm Bryan Bowles.</strong> I am currently a senior at the University of Michigan studying computer science set to graduate in May of 2020 and will be an SDE 1 at Amazon in July.</p>
+										<p>I spent the past two summers interning in Seattle and fell in love with that region of the country. My hobbies include reading, pickup sports, and hiking.</p>
 									</div>
 								</div>
 							</div>
